Add new tag and css styles

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -20,7 +20,18 @@
         </nav>
     </div>
     <div class = "main">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia, aut dicta? Tenetur corrupti maxime fugit, aspernatur repellat porro vero quam, error sunt numquam doloribus ex nulla ducimus nam eaque atque.
+        <div class="infocontainer">
+            <div class="devInfo">
+                <div class="hello">Hi I am </div>
+                <div class="name">Harsh Vardhan Singh</div>
+                <div class="about">Developer, Programmer, Traveler</div>
+                <div class="buttons">
+                    <button>DownloadCV</button>
+                    <button>Contact Me</button>
+                </div>
+            </div>
+            <div class="devPic"><img src="dev.png" alt="Harsh"></div>
+        </div>
     </div>  
 </div>
 </body>
