Edit contact page and add blog page

--- a/Portfolio/blog.html
+++ b/Portfolio/blog.html
@@ -20,20 +20,11 @@
         </nav>
     </div>
     <div class = "main">
-        <div class="infocontainer">
-            <div class="devInfo">
-                <div class="hello">Hi I am </div>
-                <div class="name">Harsh Vardhan Singh</div>
-                <div class="about">Student, Programmer, DevOps</div>
-                <div class="moreabout">A creative thinker, adept in software
-                    development and working with various
-                    data structures.</div>
-                <div class="buttons">
-                    <button>DownloadCV</button>
-                    <button>Contact Me</button>
-                </div>
-            </div>
-            <div class="devPic"><img src="dev.png" alt="Harsh"></div>
+        <div class="blogcontainer">
+            <h1>Blogs by Harsh - The Legend</h1>
+            <div class="blogItem"></div>
+                <h2>Learn JavaScript - in fun way!</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis magni debitis quisquam veritatis vero quos asperiores voluptatum quasi ipsa dolor ullam eius, totam molestias minus in natus possimus rem! Fuga?</p>
         </div>
     </div>  
 </div>
