--- a/Portfolio/intro.html
+++ b/Portfolio/intro.html
@@ -32,8 +32,8 @@
                         data structures.</div>
                     <div class="buttons">
                         <a href="/Harsh Vardhan SINGH (2).pdf" target="_blank">
-                        <button>DownloadCV</button></a>
-                        <a href="/contact.html"><button>Contact Me</button></a>
+                        <button class="btn">DownloadCV</button></a>
+                        <a href="/contact.html"><button class="btn">Contact Me</button></a>
                     </div>
                 </div>
                 <div class="devPic"><img src="dev.png" alt="Harsh"></div>
