Complete Blog page and Update Intro Page

--- a/Portfolio/intro.html
+++ b/Portfolio/intro.html
@@ -22,23 +22,23 @@
             </nav>
         </div>
         <div class="main">
-            <div class="infocontainer">
-                <div class="devInfo">
-                    <div class="hello">Hi I am </div>
-                    <div class="name">Harsh Vardhan Singh</div>
-                    <div class="about">Student, Programmer, DevOps</div>
-                    <div class="moreabout">A creative thinker, adept in software
-                        development and working with various
-                        data structures.</div>
-                    <div class="buttons">
-                        <a href="/Harsh Vardhan SINGH (2).pdf" target="_blank">
-                        <button class="btn">DownloadCV</button></a>
-                        <a href="/contact.html"><button class="btn">Contact Me</button></a>
-                    </div>
+            <div class="intro">
+                <h2>About Me</h2>
+                <p>A creative thinker, adept in software
+                    development and working with various
+                    data structures.</p>
+                <h2>My Skills</h2>
+                <div class="skillcontainer">
+                    <div class="skillitem">HTML: <div class="skill fifty"></div></div>
+                    <div class="skillitem">css: <div class="skill fifty"></div></div>
+                    <div class="skillitem">JavaScript: <div class="skill t5"></div></div>
+                    <div class="skillitem">Python: <div class="skill hundred"></div></div>
+                    <div class="skillitem">DSA: <div class="skill hundred"></div></div>
+                    <div class="skillitem">AWS: <div class="skill hundred"></div></div>
                 </div>
-                <div class="devPic"><img src="dev.png" alt="Harsh"></div>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
