Build a Password Manager

--- a/Harsh's_Portfolio/index.html
+++ b/Harsh's_Portfolio/index.html
@@ -74,6 +74,7 @@
               <button>Download Resume</button>
             </a>
             <button onclick="window.open('https://github.com/harshsingh262')">Git Hub</button>
+            <button onclick="window.open('https://leetcode.com/harshvardhan1010/')">LeetCode</button>
           </div>
         </div>
       </div>
